crates/sui-adapter-transactional-tests/tests/mvcc/receive_object_access_through_parent_df.exp
processed 14 tasks

init:
A: object(0,0)

task 1 'publish'. lines 6-78:
Error: warning[W09001]: unused alias
  ┌─ /var/folders/hg/k2qbtbvd7n35hk0sl3mtjlbw0000gn/T/.tmprhLtsK:8:23
  │
8 │     use sui::object::{Self, UID};
  │                       ^^^^ Unused 'use' of alias 'object'. Consider removing it
  │
  = This warning can be suppressed with '#[allow(unused_use)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

warning[W09001]: unused alias
  ┌─ /var/folders/hg/k2qbtbvd7n35hk0sl3mtjlbw0000gn/T/.tmprhLtsK:9:27
  │
9 │     use sui::tx_context::{Self, TxContext};
  │                           ^^^^ Unused 'use' of alias 'tx_context'. Consider removing it
  │
  = This warning can be suppressed with '#[allow(unused_use)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

warning[W09001]: unused alias
  ┌─ /var/folders/hg/k2qbtbvd7n35hk0sl3mtjlbw0000gn/T/.tmprhLtsK:9:33
  │
9 │     use sui::tx_context::{Self, TxContext};
  │                                 ^^^^^^^^^ Unused 'use' of alias 'TxContext'. Consider removing it
  │
  = This warning can be suppressed with '#[allow(unused_use)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error[E01002]: unexpected token
   ┌─ /var/folders/hg/k2qbtbvd7n35hk0sl3mtjlbw0000gn/T/.tmprhLtsK:26:17
   │
26 │         let mut mut b_child = A { id: object::new(ctx), value: b"b_child" };
   │                 ^^^
   │                 │
   │                 Unexpected 'mut'
   │                 Expected an identifier



task 2 'run'. lines 80-80:
Error: Error checking transaction input objects: DependentPackageNotFound { package_id: 0x0000000000000000000000000000000000000000000000000000000000000000 }

task 3 'view-object'. lines 82-82:
Error: task 3, lines 82-82. Unbound fake id 2,0

task 4 'view-object'. lines 84-84:
Error: task 4, lines 84-84. Unbound fake id 2,1

task 5 'view-object'. lines 86-86:
Error: task 5, lines 86-86. Unbound fake id 2,2

task 6 'view-object'. lines 88-88:
Error: task 6, lines 88-88. Unbound fake id 2,3

task 7 'view-object'. lines 90-90:
Error: task 7, lines 90-90. Unbound fake id 2,4

task 8 'view-object'. lines 92-92:
Error: task 8, lines 92-92. Unbound fake id 2,5

task 9 'view-object'. lines 94-94:
Error: task 9, lines 94-94. Unbound fake id 2,6

task 10 'view-object'. lines 96-99:
Error: task 10, lines 96-96. Unbound fake id 2,7

task 11 'run'. lines 100-100:
Error: INVALID TEST. Unknown object, object(2,4)

task 12 'run'. lines 102-102:
Error: INVALID TEST. Unknown object, object(2,4)

task 13 'run'. lines 104-104:
Error: INVALID TEST. Unknown object, object(2,4)
